syntax = "proto3";

package services;

import "com/parabola/web/services/company.proto";

option java_multiple_files = true;
option java_package = "com.parabola.web.services";
option java_outer_classname = "ObjectServiceProtos";

service ObjectServce {
  rpc GetAllObjectsInProjectForUser (GetAllObjectsInProjectForUserRequest) returns (GetAllObjectsInProjectForUserResponse);
  rpc AddCompanyToObject(AddCompanyToObjectRequest) returns (AddCompanyToObjectResponse);
  rpc RemoveCompanyInObject(RemoveCompanyInObjectRequest) returns (RemoveCompanyInObjectResponse);
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse);
  rpc GetAllCompaniesInObject(GetAllCompaniesInObjectRequest) returns (GetAllCompaniesInObjectResponse);
  rpc UpdateObjectVersion(UpdateObjectVersionRequest) returns (UpdateObjectVersionResponse);
  rpc ApproveObjectVersion(ApproveObjectVersionRequest) returns (ApproveObjectVersionResponse);
}

message Object {
  int32 object_id = 1;
  string name = 2;
  bool is_primary = 3;
  string latest_version = 4;
  string pending_version = 5;
  bool did_approve = 6;
}

message GetAllObjectsInProjectForUserRequest {
  string username = 1;
  int32 project_id = 2;
}

message GetAllObjectsInProjectForUserResponse {
  repeated Object objects = 1;
}

message AddCompanyToObjectRequest {
  string adder_username = 1;
  // username of the company to be added
  string username_added = 2;
  int32 object_id = 3;
}

message AddCompanyToObjectResponse {}

message RemoveCompanyInObjectRequest {
  int32 object_id = 1;
  Company company = 2;
}

message RemoveCompanyInObjectResponse {}

message DeleteObjectRequest {
  int32 object_id = 1;
}

message DeleteObjectResponse {}

message GetAllCompaniesInObjectRequest {
  int32 object_id = 1;
}

message GetAllCompaniesInObjectResponse {
  repeated Company companies = 1;
}

message UpdateObjectVersionRequest {
  int32 object_id = 1;
  string username = 2;
  string updated_name = 3;
  string updated_version = 4;
}

message UpdateObjectVersionResponse {}

message ApproveObjectVersionRequest {
  int32 object_id = 1;
  string username = 2;
}

message ApproveObjectVersionResponse {}