syntax = "proto3";

package services;

option java_multiple_files = true;
option java_package = "com.parabola.web.services";
option java_outer_classname = "CompanyProtos";

message Company {
  string username = 1;
  string company_name = 2;
  string role = 3;
}